# smart-grid-rag-backend

./: .dockerignore  .gcloudignore  Dockerfile  README.md  chat.py  ingest.py  main.py  pyproject.toml  rag.py  server.py
db/5e4868d4-2854-457f-9ff9-0520b8e35030/: index_metadata.pickle
db/d8538682-dd1c-4303-8eb0-05c743c4a423/: index_metadata.pickle
db/f3d06578-71f6-4568-92b0-8fd2ea46c6ae/: index_metadata.pickle
